{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 128,
  "lineage": "ccd0128e-f30d-7cf7-3971-a7d9ca74847e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:security-group/sg-0a774702036c97dd1",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a774702036c97dd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "176906365059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011a8a7b20fd8427e",
            "association_id": "eipassoc-0a11484b4a873d855",
            "domain": "vpc",
            "id": "eipalloc-011a8a7b20fd8427e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a49c812b9bd3f774",
            "private_dns": "ip-11-0-0-50.ec2.internal",
            "private_ip": "11.0.0.50",
            "public_dns": "ec2-107-23-196-214.compute-1.amazonaws.com",
            "public_ip": "107.23.196.214",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "dbaeten-terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c54a07b70974b495",
            "arn": "arn:aws:ec2:us-east-1:176906365059:instance/i-0b61bde56c2c523f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b61bde56c2c523f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dbaeten",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e68d34c0f587abe9",
            "private_dns": "ip-11-0-0-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.77",
            "public_dns": "ec2-44-201-171-160.compute-1.amazonaws.com",
            "public_ip": "44.201.171.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006c962bf15b92ccf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c3df1ea2b615ba5",
            "tags": {
              "Name": "dbaeten-terraform-EC2"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-EC2",
              "env": "dbaeten-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a774702036c97dd1"
            ]
          },
          "dependencies": [
            "aws_default_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:internet-gateway/igw-0a51c0842e8ca4c17",
            "id": "igw-0a51c0842e8ca4c17",
            "owner_id": "176906365059",
            "tags": {
              "Name": "dbaeten-terraform-IGW"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-IGW",
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011a8a7b20fd8427e",
            "association_id": "eipassoc-0a11484b4a873d855",
            "connectivity_type": "public",
            "id": "nat-0d69650a777bca792",
            "network_interface_id": "eni-0a49c812b9bd3f774",
            "private_ip": "11.0.0.50",
            "public_ip": "107.23.196.214",
            "subnet_id": "subnet-05c3df1ea2b615ba5",
            "tags": {
              "Name": "dbaeten-terraform-nat"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-nat",
              "env": "dbaeten-terraform"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a82a3de0db902f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d69650a777bca792",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a82a3de0db902f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_nat_gw",
            "aws_route_table.private-rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a51c0842e8ca4c17",
            "id": "r-rtb-09ec3f2cb01d4b6121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ec3f2cb01d4b612",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-05a82a3de0db902f5",
            "id": "rtb-05a82a3de0db902f5",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d69650a777bca792",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dbaeten-terraform-private-rt"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-private-rt",
              "env": "dbaeten-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-09ec3f2cb01d4b612",
            "id": "rtb-09ec3f2cb01d4b612",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a51c0842e8ca4c17",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dbaeten-terraform-public-rt"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-public-rt",
              "env": "dbaeten-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089efdac9a1c89e60",
            "route_table_id": "rtb-05a82a3de0db902f5",
            "subnet_id": "subnet-0f181bf3fc401a2f9"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072cd82892655edbe",
            "route_table_id": "rtb-05a82a3de0db902f5",
            "subnet_id": "subnet-024e92c38c4d1c99d"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444a1e0f10552297",
            "route_table_id": "rtb-09ec3f2cb01d4b612",
            "subnet_id": "subnet-05c3df1ea2b615ba5"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de216d9a0407e855",
            "route_table_id": "rtb-09ec3f2cb01d4b612",
            "subnet_id": "subnet-0788d9349b53d3641"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0f181bf3fc401a2f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f181bf3fc401a2f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbaeten-terraform-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-Private-Subnet-us-east-1a",
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-024e92c38c4d1c99d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024e92c38c4d1c99d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbaeten-terraform-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-Private-Subnet-us-east-1b",
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-05c3df1ea2b615ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c3df1ea2b615ba5",
            "ipv6_cidr_block": "2600:1f18:572f:200::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d52ee4008c6a7c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbaeten-terraform-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-Public-Subnet-us-east-1a",
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-0788d9349b53d3641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0788d9349b53d3641",
            "ipv6_cidr_block": "2600:1f18:572f:201::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-04c3e9c4717c66d33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbaeten-terraform-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "dbaeten-terraform-Public-Subnet-us-east-1b",
              "env": "dbaeten-terraform"
            },
            "vpc_id": "vpc-066c58f51510cbba5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:vpc/vpc-066c58f51510cbba5",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-03e9a3d9a9c780dfb",
            "default_route_table_id": "rtb-0aa716802dd230b0a",
            "default_security_group_id": "sg-0a774702036c97dd1",
            "dhcp_options_id": "dopt-01662f52edb1b9c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066c58f51510cbba5",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-04a054f19ec2031c0",
            "ipv6_cidr_block": "2600:1f18:572f:200::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa716802dd230b0a",
            "owner_id": "176906365059",
            "tags": {
              "Name": "dbaeten"
            },
            "tags_all": {
              "Name": "dbaeten",
              "env": "dbaeten-terraform"
            }
          }
        }
      ]
    }
  ]
}